<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/background"
		android:gravity="center"
		android:padding="40dip">
	<TextView
		android:text="@string/main_title"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginBottom="25dip"
		android:textSize="24.5sp" />
	<Button
		android:id="@+id/easy_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/easy_label" />
	<Button
		android:id="@+id/medium_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/medium_label" />
	<Button
		android:id="@+id/hard_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/hard_label" />
	<Button
		android:id="@+id/custom_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/custom_game_label" />


	</LinearLayout>


    
    
