<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Collisions" >
    
	
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/background"
		android:gravity="center"
		android:padding="40dip">
	<TextView
		android:id="@+id/score_text"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginBottom="25dip"
		android:textSize="24.5sp" />
	<TextView
		android:text="@string/main_title"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginBottom="25dip"
		android:textSize="24.5sp" />
	<Button
		android:id="@+id/share_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/share_label" />
	<Button
		android:id="@+id/exit_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/exit_label" />
	
	</LinearLayout>

</RelativeLayout>